Security-and-Policies/vagrant/curl-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client
  namespace: projectx
  labels:
    app: curl-client
spec:
  containers:
    - name: curl
      image: curlimages/curl:latest
      command: ["sleep", "infinity"]
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
