Security-and-Policies/vagrant/producer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: projectx # added the namespace
  labels:
    app: fun-facts
    role: producer
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: fun-facts
    role: producer
