Security-and-Policies/vagrant/producer-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-netpol
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      app: fun-facts
      role: producer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: fun-facts
              role: consumer
      ports:
        - protocol: TCP
          port: 5000
